Add links to butter paneer and lassi in index.html
Links to paneer butter masala recipe and mango lassi recipe added to index.html.

Allows to navigate to recipes containing paneer butter masala and mango lassi directly from index.html.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Lasagna</a>
+        <a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a>
+        <a href="./recipes/mango_lassi.html">Mango Lassi</a>
     </body>
 
 </html>
