--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
-        <a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a>
-        <a href="./recipes/mango_lassi.html">Mango Lassi</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
+            <li><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
+        </ul>
     </body>
 
 </html>
