updated index with class attributes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="main-heading">Odin Recipes</h1>
+        <ul class="recipes-avail">
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
             <li><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
