--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
         <h1 class="main-heading">Odin Recipes</h1>
         <ul class="recipes-avail">
-            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
-            <li><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
+            <li class="list-style"><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li class="list-style"><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
+            <li class="list-style"><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
         </ul>
     </body>
 
