--- a/recipes/paneer_butter_masala.html
+++ b/recipes/paneer_butter_masala.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Paneer Butter Masala</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
