Add style to all recipes page
Added style to recipe pages to make it visually appealing

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,14 +7,16 @@
     </head>
     
     <body>
-        <h1>Lasagna</h1>
-        <img src="../img/lasagna.jpg" alt="Image of finished lasagna" height="310" width="310">
-        <h2>Description</h2>
+        <h1 class="main-heading">Lasagna</h1>
+        <img src="../img/lasagna.jpg" alt="Image of finished lasagna" class="recipe-img">
+        <h2 class="sub-heading">Description</h2>
+        <div class="description">
         <p><strong>Lasagna</strong> is a type of <em>pasta</em>, possibly one of the oldest types, made in very <em>wide, flat sheets.</em></p>
         <p>This recipe's uses italian sausage and <em>lean</em> ground beef to make it as delicious as possible.</p>
         <p>The addition of delicious cheeses like <strong><em>mozzarella</em></strong> and <strong><em>parmesan</em></strong> makes this the best lasagna ever!!</p>
-        <h2>Ingredients</h2>
-        <ul>
+        </div>
+        <h2 class="sub-heading">Ingredients</h2>
+        <ul class="ingredients">
             <l1>1 pound sweet Italian sausage</l1>
             <li>¾ pound lean ground beef</li>
             <li>½ cup minced onion</li>
@@ -36,8 +38,8 @@
             <li>¾ pound mozzarella cheese, sliced</li>
             <li>¾ cup grated Parmesan cheese</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-heading">Steps</h2>
+        <ol class="steps">
             <li>Gather all your ingredients.</li>
             <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
             <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</li>
