--- a/recipes/mango_lassi.html
+++ b/recipes/mango_lassi.html
@@ -7,20 +7,22 @@
     </head>
 
     <body>
-        <h1>Mango Lassi</h1>
-        <img src="../img/mango_lassi.jpg" alt="Image of finished Mango Lassi" height="310" width="310">
-        <h2>Description</h2>
+        <h1 class="main-heading">Mango Lassi</h1>
+        <img src="../img/mango_lassi.jpg" alt="Image of finished Mango Lassi" class="recipe-img">
+        <h2 class="sub-heading">Description</h2>
+        <div class="description">
         <p><strong>Mango Lassi</strong> is a popular <em>lassi</em> variety made with <em>Indian yogurt</em>, ripe sweet mangoes and cardamoms. A small amount of <em>milk</em> or <em>fresh cream</em> known as <strong><em>malai</em></strong> is also added for a creamy and rich feel. This also helps balance the sourness of yogurt. Sometimes ingredients like <em>rose water</em> and <em>saffron</em> are also added for a flavor-twist</p>
         <p>A well made <strong>Mango Lassi</strong> is smooth, creamy and <strong><em>thick</em></strong>, yet of pouring consistency. It has a significant mango flavor, tastes sweet with delicate hints of sourness from yogurt.</p>
-        <h2>Ingredients</h2>
-        <ul>
+        </div>
+        <h2 class="sub-heading">Ingredients</h2>
+        <ul class="ingredients">
             <li>2 mangos - peeled, seeded and diced</li>
             <li>2 cups plain yogurt</li>
             <li>½ cup white sugar</li>
             <li>1 cup ice</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-heading">Steps</h2>
+        <ol class="steps">
             <li>In a blender, combine mangos, yogurt, sugar and ice.</li>
             <li>Blend until smooth.</li>
             <li>Pour into glasses and serve.</li>
