--- a/recipes/paneer_butter_masala.html
+++ b/recipes/paneer_butter_masala.html
@@ -7,13 +7,15 @@
     </head>
 
     <body>
-        <h1>Paneer Butter Masala</h1>
-        <img src="../img/paneer_butter_masala.jpg" alt="Image of finished paneer butter masala" height="310" width="310">
-        <h2>Description</h2>
+        <h1 class="main-heading">Paneer Butter Masala</h1>
+        <img src="../img/paneer_butter_masala.jpg" alt="Image of finished paneer butter masala" class="recipe-img">
+        <h2 class="sub-heading">Description</h2>
+        <div class="description">
         <p><strong>Paneer Butter Masala</strong>, also known as <strong>butter paneer</strong> is a rich and creamy <em>curry</em> made with <em>paneer</em>, spices, onions, tomatoes, cashews and butter. As the name denotes, the curry is cooked in butter which imparts it's characteristic buttery flavor to the dish.</p>
         <p>It is one of the most popular dishes in <em>Indian restaurants</em> similar to <strong>Kadai Paneer</strong>, <strong>Palak Paneer</strong>, <strong>Matar Paneer</strong> and <strong>Malai Kofta</strong></p>
-        <h2>Ingredients</h2>
-        <ul>
+        </div>
+        <h2 class="sub-heading">Ingredients</h2>
+        <ul class="ingredients">
             <li>¼ cup butter</li>
             <li>1 pound paneer, cut into 1/2-inch cubes</li>
             <li>2 medium onions, finely chopped</li>
@@ -30,8 +32,8 @@
             <li>1 pint half-and-half</li>
             <li>1 teaspoon salt, or to taste</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-heading">Steps</h2>
+        <ol class="steps">
             <li>Melt butter in a skillet over medium heat.</li>
             <li>Add paneer; cook and stir until golden, about 5 minutes.</li>
             <li>Add onions, bell pepper, jalapeños, ground cashews, garlic paste, ginger paste, cayenne pepper, cumin, coriander, and garam masala; cook and stir until well combined and fragrant, about 1 minute.</li>
