--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     </head>
 
     <body>
+        <div class="heading">
         <h1 class="main-heading">Odin Recipes</h1>
+        </div>
+        <div class="recipes-list">
         <ul class="recipes-avail">
             <li class="list-style"><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li class="list-style"><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
             <li class="list-style"><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
         </ul>
+        </div>
     </body>
 
 </html>
