--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <h1 class="main-heading">Odin Recipes</h1>
         </div>
         <div class="recipes-list">
-        <ul class="recipes-avail">
-            <li class="list-style"><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li class="list-style"><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
-            <li class="list-style"><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
+        <h2 class="recipes-list-heading">Recipes Available</h2>
+        <ul class="recipes-list-avail">
+            <li class="recipes-avail-list-style one"><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li class="recipes-avail-list-style two"><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
+            <li class="recipes-avail-list-style three"><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
         </ul>
         </div>
     </body>
