Add styles, logo and recipe img to index
Image of recipe book, and logo for the website has been added. Along with that, more styles have been added to the index file.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 
     <body>
         <div class="heading">
+        <img src="https://www.theodinproject.com/mstile-310x310.png" alt="odin logo" class="logo">
         <h1 class="main-heading">Odin Recipes</h1>
         </div>
         <div class="recipes-list">
         <h2 class="recipes-list-heading">Recipes Available</h2>
+        <img src="./img/recipe-book.svg" alt="icon of recipe book" class="recipes-list-image">
         <ul class="recipes-list-avail">
             <li class="recipes-avail-list-style one"><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li class="recipes-avail-list-style two"><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
