--- a/index.html
+++ b/index.html
@@ -7,18 +7,26 @@
     </head>
 
     <body>
-        <div class="heading">
-        <img src="https://www.theodinproject.com/mstile-310x310.png" alt="odin logo" class="logo">
-        <h1 class="main-heading">Odin Recipes</h1>
-        </div>
-        <div class="recipes-list">
-        <h2 class="recipes-list-heading">Recipes Available</h2>
-        <img src="./img/recipe-book.svg" alt="icon of recipe book" class="recipes-list-image">
-        <ul class="recipes-list-avail">
-            <li class="recipes-avail-list-style one"><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li class="recipes-avail-list-style two"><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
-            <li class="recipes-avail-list-style three"><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
-        </ul>
+
+        <div class="body">
+
+            <div class="header">
+                <h1>Odin Recipes</h1>
+            </div>
+
+            <div class="card">
+                <div class="recipe-header">
+                    <h2>Recipes Available</h2>
+                </div>
+
+                <div class="recipe-list">
+                    <ul>
+                        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+                        <li><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
+                        <li><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </body>
 
