change more layout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="recipe-list">
-                    <ul>
+                    <ul class="recipe-list-ul">
                         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
                         <li><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
                         <li><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
