--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
                 </div>
 
                 <div class="recipe-list">
-                    <ul class="recipe-list-ul">
-                        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-                        <li><a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a></li>
-                        <li><a href="./recipes/mango_lassi.html">Mango Lassi</a></li>
-                    </ul>
+                    <a href="./recipes/lasagna.html">Lasagna</a>
+                    <a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a>
+                    <a href="./recipes/mango_lassi.html">Mango Lassi</a>
                 </div>
             </div>
         </div>
