Change layout of index using css
Layout changed in index page.

This gives a clean look in the page.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 </div>
 
                 <div class="recipe-list">
-                    <a href="./recipes/lasagna.html">Lasagna</a>
-                    <a href="./recipes/paneer_butter_masala.html">Paneer Butter Masala</a>
-                    <a href="./recipes/mango_lassi.html">Mango Lassi</a>
+                    <a href="./recipes/lasagna.html" class="recipe-list-one">Lasagna</a>
+                    <a href="./recipes/paneer_butter_masala.html" class="recipe-list-two">Paneer Butter Masala</a>
+                    <a href="./recipes/mango_lassi.html" class="recipe-list-three">Mango Lassi</a>
                 </div>
             </div>
         </div>
